overflow issue solved

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,12 +36,12 @@ header .nav{
 }
 .nav .mobile-menu{
     display: none;
-    width: 80%;
+    width: 100%;
     height: 100%;
     background: #FFFFFF;
     position: absolute;
     top: 0;
-    right: -80%;
+    transform: translateX(100%);
     transition: all 1s ease-in-out;
 }
 .overlay{
@@ -451,6 +451,9 @@ header .nav{
 /* MEDIA SCREEN */
 /* FOR MOBILE PHONE */
 @media (max-width: 480px) {
+    body{
+        overflow-x: hidden;
+    }   
     /* HEADER */
 header{
     width: 100%;
